# ts-aot

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LODASH_STATUS.md  MIGRATION.md  README.md  abstract_missing_impl_fail.json  aoc_2015_day1.json  aoc_2015_day2.json  aoc_2015_day3.json  aoc_2015_day4.json  aoc_2015_day5.json  aoc_2015_day6.json  arrays.json  arrays_sort.json  attach_and_break.ps1  bce_range_test.ll  build_log.txt  calls.json  cert.pem  check_err.cpp  check_layout.cpp  check_layout2.cpp  check_layout3.cpp  circ_a.ts.json  circ_b.ts.json  compiler_debug.txt  compiler_output.txt  control_flow_advanced.json  debug.ps1  debug_crash.cdb  debug_driver.cpp  debug_lodash_auto.ps1  destructuring.json  devirt_test.ll  error.txt  error_handling.json  fix_js_check_patterns.ps1  fix_js_run_commands.ps1  (+59 more)
debug_driver_cmake/: CMakeLists.txt
extensions/: CMakeLists.txt  extension-contract.schema.json  extension.schema.json
extensions/console/: console.ext.json.disabled
extensions/node/: CMakeLists.txt
extensions/node/assert/: CMakeLists.txt  assert.ext.json
extensions/node/async_hooks/: CMakeLists.txt  async_hooks.ext.json
extensions/node/buffer/: buffer.ext.json
extensions/node/child_process/: CMakeLists.txt  child_process.ext.json
extensions/node/cluster/: CMakeLists.txt  cluster.ext.json
extensions/node/console/: console.ext.json
extensions/node/core/: CMakeLists.txt
extensions/node/crypto/: CMakeLists.txt  crypto.ext.json
extensions/node/dgram/: CMakeLists.txt  dgram.ext.json
extensions/node/dns/: CMakeLists.txt  dns.ext.json
extensions/node/events/: CMakeLists.txt  events.ext.json
extensions/node/fetch/: CMakeLists.txt  fetch.ext.json
extensions/node/fs/: CMakeLists.txt  fs.ext.json
extensions/node/http/: CMakeLists.txt  http.ext.json
extensions/node/http2/: CMakeLists.txt  http2.ext.json
extensions/node/inspector/: CMakeLists.txt  inspector.ext.json
extensions/node/module/: CMakeLists.txt  module.ext.json
extensions/node/net/: CMakeLists.txt  net.ext.json
extensions/node/os/: CMakeLists.txt  os.ext.json
extensions/node/path/: CMakeLists.txt  path.ext.json
extensions/node/perf_hooks/: CMakeLists.txt  perf_hooks.ext.json
extensions/node/process/: process.ext.json
extensions/node/querystring/: querystring.ext.json
extensions/node/readline/: CMakeLists.txt  readline.ext.json
extensions/node/stream/: CMakeLists.txt  stream.ext.json
extensions/node/string_decoder/: CMakeLists.txt  string_decoder.ext.json
extensions/node/tls/: tls.ext.json
extensions/node/tty/: CMakeLists.txt  tty.ext.json
extensions/node/url/: CMakeLists.txt  url.ext.json
extensions/node/util/: CMakeLists.txt  util.ext.json
extensions/node/v8/: CMakeLists.txt  v8.ext.json
extensions/node/vm/: CMakeLists.txt  vm.ext.json
extensions/node/zlib/: CMakeLists.txt  zlib.ext.json
extensions/test/: test.ext.json
scripts/test_runner/: CMakeLists.txt  main_wrapper.cpp
src/compiler/: CMakeLists.txt  Driver.cpp  Driver.h  main.cpp
src/compiler/analysis/: Analyzer.cpp  Analyzer.h  Analyzer_Classes.cpp  Analyzer_Core.cpp  Analyzer_Declarations.cpp  Analyzer_Escape.cpp  Analyzer_Expressions.cpp  Analyzer_Expressions_Access.cpp  Analyzer_Expressions_Async.cpp  Analyzer_Expressions_Binary.cpp  Analyzer_Expressions_Calls.cpp  Analyzer_Expressions_Literals.cpp  Analyzer_Expressions_Unary.cpp  Analyzer_Functions.cpp  Analyzer_Helpers.cpp  Analyzer_JSX.cpp  Analyzer_Statements.cpp  Analyzer_StdLib.cpp  Analyzer_StdLib_Assert.cpp  Analyzer_StdLib_AsyncHooks.cpp  Analyzer_StdLib_Buffer.cpp  Analyzer_StdLib_ChildProcess.cpp  Analyzer_StdLib_Cluster.cpp  Analyzer_StdLib_Crypto.cpp  Analyzer_StdLib_DNS.cpp  Analyzer_StdLib_Dgram.cpp  Analyzer_StdLib_Events.cpp  Analyzer_StdLib_FS.cpp  Analyzer_StdLib_HTTP.cpp  Analyzer_StdLib_Http2.cpp  Analyzer_StdLib_Net.cpp  (+26 more)
src/runtime/: CMakeLists.txt
tests/: CMakeLists.txt  cluster_import.ts  cluster_simple.ts  http_server_test.ts  net_test.ts  run_all.py  simple_path.ts  strategy_b_baseline.json  test_http_client.ps1  ts_test_platform.py  verify_http.ps1
tests/golden_hir/: README.md
tests/golden_ir/: .golden_ir_baseline.json  README.md  debug_ir.ll  runner.ps1  runner.py
tests/integration/: CMakeLists.txt  abstract_classes.ts  abstract_instantiation_fail.ts  abstract_missing_impl_fail.ts  access_modifiers.ts  aoc_2015_day1.ts  aoc_2015_day2.ts  aoc_2015_day3.ts  aoc_2015_day4.ts  aoc_2015_day5.ts  aoc_2015_day6.ts  array_functional.json  array_functional.ts  array_functional.ts.json  arrays.json  arrays.ts  arrays_sort.ts  async_arrow_test.json  async_arrow_test.ts  async_basic.json  async_basic.ts  async_class.json  async_class.ts  async_error.ts  async_fs.json  async_fs.ts  async_io_test.json  async_io_test.ts  async_test.json  async_test.ts  calls.json  calls.ts  classes_basic.ts  collection_parity.json  collection_parity.ts  control_flow_advanced.ts  crypto.ts  crypto.txt  date_math_parity.json  date_math_parity.ts  (+112 more)
tests/js_patterns/: array_ops.js  basic_function.js  for_in.js  function_hoisting.js  iife_call.js  iife_closure.js  iife_simple.js  iife_while.js  large_object.js  lodash_8k.js  lodash_bisect_1.js  lodash_bisect_2.js  lodash_bisect_3.js  lodash_bisect_4.js  lodash_bisect_5.js  lodash_bisect_6.js  lodash_bisect_7.js  lodash_call_test.js  lodash_complete_header.js  lodash_first_500.js  lodash_header.js  lodash_init_sim.js  lodash_run_in_context.js  many_params.js  multi_props.js  nested_functions.js  object_assign.js  object_literal.js  object_method.js  run_in_context.js  typeof.js
tests/node/: .migrated_files.md  .node_test_baseline.json  PROGRESS.md  README.md  RUNNER_README.md  debug_ir.ll  run_tests.ps1  run_tests.py  test_template.ts
tests/npm/: .gitignore  .npm_test_baseline.json  runner.py
tests/server/: .server_test_baseline.json  coverage_report.py  run_server_tests.py
tests/test262/: .test262_baseline.json  analyze.py  run_test262.py
tests/unit/: AnalyzerTests.cpp  BoxingPolicyTests.cpp  NumberTests.cpp  RuntimeTests.cpp  TsArrayTests.cpp  TsDateTest.cpp  TsStringTests.cpp
(+2412 files in other folders)
